    (todd)

    MAPREDUCE-6077. native-task: Remove CustomModule examples in nativetask (seanzhong)

    MAPREDUCE-6078. native-task: fix gtest build on macosx (Binglin Chang)

Release 2.7.0 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

    MAPREDUCE-6227. DFSIO for truncate. (shv via yliu)

    MAPREDUCE-6228. Add truncate operation to SLive. (Plamen Jeliazkov via shv)

  IMPROVEMENTS

    MAPREDUCE-6149. Document override log4j.properties in MR job.
    (Junping Du via harsh)

    MAPREDUCE-6194. Bubble up final exception in failures during creation
    of output collectors (Varun Saxena via harsh)

    MAPREDUCE-5420. Remove mapreduce.task.tmp.dir from mapred-default.xml
    (James Carman via harsh)

    MAPREDUCE-5932. Provide an option to use a dedicated reduce-side shuffle
    log (Gera Shegalov via jlowe)

    MAPREDUCE-6046. Change the class name for logs in RMCommunicator
    (Sahil Takiar via devaraj)

    HADOOP-11032. Replace use of Guava's Stopwatch with Hadoop's StopWatch
    (ozawa)

    MAPREDUCE-6173. Document the configuration of deploying MR over distributed
    cache with enabling wired encryption at the same time. 
    (Junping Du via xgong)

    MAPREDUCE-6141. History server leveldb recovery store (jlowe)

    MAPREDUCE-6150. Update document of Rumen (Masatake Iwasaki via aw)

    MAPREDUCE-6151. Update document of GridMix (Masatake Iwasaki via aw)

    MAPREDUCE-6143. add configuration for mapreduce speculative execution in
    MR2 (zxu via rkanter)

    MAPREDUCE-5800. Use Job#getInstance instead of deprecated constructors
    (aajisaka)

    MAPREDUCE-6253. Update use of Iterator to Iterable. (Ray Chiang via devaraj)

    MAPREDUCE-5335. Rename Job Tracker terminology in ShuffleSchedulerImpl.
    (devaraj via ozawa)

    MAPREDUCE-4431. mapred command should print the reason on killing already 
    completed jobs. (devaraj via ozawa)

    MAPREDUCE-6255. Fix JobCounter's format to use grouping separator.